--- a/style.css
+++ b/style.css
@@ -1,7 +1,83 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter&family=Judson:ital,wght@0,400;0,700;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 #opcoes{
     text-decoration: none;
+}
+
+.titulo {
+    
+    margin: 10px 0 13px 0;
+    font-size: 80px;
+    font
+}
+
+body {
+    margin: 0;
+}
+
+a {
+    color: black;
+    text-decoration: none;
+}
+
+nav {
+    text-align:center;
+    font-size: 20px;
+    text-decoration: none; 
+    color: black;
+    font-family: "Inter", sans-serif;
+    font-weight: 400;
+}
+
+.imagem-main {
+    margin-top: 13px;
+    width: 100%;
+    height: 631px;
+   object-fit:cover;
+}
+
+.frase {
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+    background-color: #EFD8FE;
+    margin: 0;
+    width: 100%;
+    padding: 25px 300px 25px 300px;
+    font-family: "Judson", serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.sobre {
+    padding: 60px 50px 60px 135px;
+    overflow: hidden;
+    background-color: #F8F7F7;
+}
+
+.sobre-texto, .sobre-foto {
+    float: left;
+    width: 45%;
+    margin-right: 10%;
+    box-sizing: border-box;  
+}
+
+.sobre-foto {
+    margin-right: 0;
+}
+
+.sobre-texto > h2 {
+    font-family: "Judson", serif;
+    font-weight: 1000;
+    font-style: bold;
+    font-size: 40px;
+}
+
+.sobre-texto > p {
+    font-family: "Inter", sans-serif;
+    font-weight: 400;
 }
