--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@
     top: 0;
     background-color: #fefcff;
     padding: 20px 10px 20px 10px;
+    z-index: 1;
     
 }
 .link{
@@ -31,12 +32,16 @@
     font-size: 20px;
     color: black;
     text-decoration: none;
+    font-weight: 500;
 }
 .linkHere{
     font-family: inter;
     font-size: 20px;
-    color: #EFD8FE;
+    color: #d7a9f5;
     text-decoration: none;
+    font-weight: 500;
+    
+
 }
 body {
     margin: 0px;
@@ -47,6 +52,57 @@ body {
     height: 631px;
     object-fit:cover;
 }
+.card{
+
+    width: 200px;
+    height: 320px;
+    border-radius: 30px;
+    background: #EFD8FE;
+    margin-left: 10px;
+    display: inline-block;
+    justify-self: center;
+}
+
+.card-img{
+    width: 200px;
+    border-radius: 30px 30px 30px 30px;
+    padding-top: 0px;
+    transition: all 250ms;
+}
+
+.card-img:hover {
+    transform: scale(1.04);
+    border-radius: 15px 15px 15px 15px;
+    box-shadow: 0px 0px 20px rgba(225, 145, 243, 0.772);
+  }
+
+button{
+    font-family: Inter;
+    font-weight: bold;
+    background-color: #fefcff;
+    padding: 10px 25px;
+    margin-top: 10px;
+    border: unset;
+    border-radius: 15px;
+    z-index: 0;
+    position: relative;
+    font-size: 17px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 28px;
+    transition: all 250ms;
+}
+
+
+button:hover {
+    background-color: #d7a9f5;
+    cursor: pointer;
+    transform: scale(1.1)
+}
+   
+
+
 .quote{
     background-color: #EFD8FE;
     padding: 10px 10px 10px 10px;
@@ -58,6 +114,13 @@ body {
     text-align: center;
     font-size: 20px;
     text-shadow: 0px 0px 8px rgba(0, 0, 0, 0.33);
+}
+.produtos{
+    font-family: Judson;
+    margin-left: 10px;
+    font-size: 35px;
+    font-weight: 500;
+    text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.33);
 }
 .frase {
     display: flex;
@@ -78,15 +141,17 @@ body {
     background-color: #F8F7F7;
 }
 
-.sobre-texto, .sobre-foto {
+.sobre-texto{
     float: left;
     width: 45%;
     margin-right: 10%;
     box-sizing: border-box;  
 }
 
-.sobre-foto {
-    margin-right: 0;
+.img-sobre {
+    width: 350px;
+    border-radius: 20px;
+    text-shadow: 0px 0px 15px rgba(0, 0, 0, 0.826);
 }
 
 .sobre-texto > h2 {
@@ -99,4 +164,23 @@ body {
 .sobre-texto > p {
     font-family: "Inter", sans-serif;
     font-weight: 400;
+}
+
+.instagram{
+    background-color: #d7a9f5;
+    width: 17px;
+    scale: 2;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 5px;
+    justify-content: center;
+    align-content: center;
+    display: flex;
+}
+.legenda-footer{
+    background-color: #EFD8FE;
+    padding: 1px;
+    display: flex;
+    justify-content: center;
 }
