--- a/style.css
+++ b/style.css
@@ -1,13 +1,16 @@
 @import url(https://fonts.googleapis.com/css?family=Judson:regular,italic,700);
 @import url(https://fonts.googleapis.com/css?family=Inter:100,200,300,regular,500,600,700,800,900);
-#opcoes{
+
+#opcoes {
     text-decoration: none;
 }
-a{
+
+a {
     text-decoration: none;
     color: black;
 }
-.mainTitle{
+
+.mainTitle {
     font-family: Judson;
     text-align: center;
     font-size: 40px;
@@ -19,7 +22,7 @@ a{
 
 }
 
-.navBar{
+.navBar {
     display: flex;
     justify-content: space-around;
     position: -webkit-sticky;
@@ -28,47 +31,68 @@ a{
     background-color: #fefcff;
     padding: 20px 10px 20px 10px;
     z-index: 1;
-    
+
 }
-.link{
+
+.link {
     font-family: inter;
     font-size: 20px;
     color: black;
     text-decoration: none;
     font-weight: 500;
 }
-.linkHere{
+
+.linkHere {
     font-family: inter;
     font-size: 20px;
     color: #d7a9f5;
     text-decoration: none;
     font-weight: 500;
-    
+
 
 }
+
 body {
     margin: 0px;
 }
 
-.img{
+.img {
     width: 100%;
     height: 631px;
-    object-fit:cover;
+    object-fit: cover;
 }
-.card{
 
-    width: 360px;
-    height: 530px;
-    border-radius: 30px;
+.produtos-escrito {
+    font-weight: bold;
+    margin: 40px 0 20px 10%;
+}
+
+.produtos-escrito > p {
+    margin: 0;
+}
+
+article {
+    display: flex;
+    gap: 17px;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 73px;
+}
+
+.card {
+    width: 409px;
+    height: 499px;
+    border-radius: 50px;
     background: #EFD8FE;
-    margin-left: 10px;
     display: inline-block;
     justify-self: center;
 }
 
-.card-img{
-    width: 360px;
-    border-radius: 30px 30px 30px 30px;
+.card-img {
+    
+    width: 409px;
+    height: 419px;
+    border-radius: 50px;
     padding-top: 0px;
     transition: all 250ms;
 }
@@ -77,23 +101,21 @@ body {
     transform: scale(1.04);
     border-radius: 15px 15px 15px 15px;
     box-shadow: 0px 0px 20px rgba(225, 145, 243, 0.772);
-  }
+}
 
-button{
+button {
     font-family: Inter;
     font-weight: bold;
     background-color: #fefcff;
-    padding: 10px 25px;
-    margin-top: 10px;
+    padding: 14px 24px;
     border: unset;
-    border-radius: 15px;
+    border-radius: 50px;
     z-index: 0;
-    position: relative;
-    font-size: 23px;
+    font-size: 14px;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 90px;
+    margin: 14px 0 0 33px;
     transition: all 250ms;
 }
 
@@ -103,28 +125,31 @@ button:hover {
     cursor: pointer;
     transform: scale(1.1)
 }
-   
 
 
-.quote{
+
+.quote {
     background-color: #EFD8FE;
     padding: 10px 10px 10px 10px;
-    display:flex;
+    display: flex;
     justify-content: center;
 }
-.text{
+
+.text {
     font-family: Judson;
     text-align: center;
     font-size: 20px;
     text-shadow: 0px 0px 8px rgba(0, 0, 0, 0.33);
 }
-.produtos{
+
+.produtos {
     font-family: Judson;
     margin-left: 10px;
     font-size: 35px;
     font-weight: 500;
     text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.33);
 }
+
 .frase {
     display: flex;
     flex-direction: row;
@@ -144,11 +169,11 @@ button:hover {
     background-color: #F8F7F7;
 }
 
-.sobre-texto{
+.sobre-texto {
     float: left;
     width: 45%;
     margin-right: 10%;
-    box-sizing: border-box;  
+    box-sizing: border-box;
 }
 
 .img-sobre {
@@ -157,19 +182,19 @@ button:hover {
     text-shadow: 0px 0px 15px rgba(0, 0, 0, 0.826);
 }
 
-.sobre-texto > h2 {
+.sobre-texto>h2 {
     font-family: "Judson", serif;
     font-weight: 1000;
     font-style: bold;
     font-size: 40px;
 }
 
-.sobre-texto > p {
+.sobre-texto>p {
     font-family: "Inter", sans-serif;
     font-weight: 400;
 }
 
-.instagram{
+.instagram {
     background-color: #d7a9f5;
     width: 17px;
     scale: 2;
@@ -181,7 +206,8 @@ button:hover {
     align-content: center;
     display: flex;
 }
-.legenda-footer{
+
+.legenda-footer {
     background-color: #EFD8FE;
     padding: 1px;
     display: flex;
