--- a/style.css
+++ b/style.css
@@ -130,15 +130,16 @@ button:hover {
 
 .quote {
     background-color: #EFD8FE;
-    padding: 10px 10px 10px 10px;
+    padding: 20px 10px 28px 10px;
     display: flex;
     justify-content: center;
 }
 
 .text {
+
     font-family: Judson;
     text-align: center;
-    font-size: 20px;
+    font-size: 48px;
     text-shadow: 0px 0px 8px rgba(0, 0, 0, 0.33);
 }
 
@@ -212,4 +213,66 @@ button:hover {
     padding: 1px;
     display: flex;
     justify-content: center;
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: #fff;
+    text-align: center;
+}
+
+.footer-bar {
+    background-color: #9867B899;
+    color: #010B13;
+    padding: 5px 0; 
+    margin: 0;
+}
+
+.footer-background {
+    background-color: #EFD8FE;
+    padding: 27px 0; 
+    margin: 0;
+    position: relative;
+}
+
+.social-media {
+    position: absolute;
+    right: 10px; 
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.social-media a {
+    margin: 0;
+}
+
+.social-media img {
+    width: 300px;
+    height: auto;
+}
+
+.contatenos-img-container {
+    position: relative;
+    width: 100%;
+    height: 128px;
+    overflow: hidden;
+}
+
+.contatenos-img-container > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.text-overlay {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 20px; /* Ajuste conforme necessário */
+    font-weight: bold;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Adiciona uma sombra ao texto para melhor visibilidade */
 }
