--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ body {
     box-shadow: 0px 0px 20px rgba(225, 145, 243, 0.772);
 }
 
-button {
+button{
     font-family: Inter;
     font-weight: bold;
     background-color: #fefcff;
@@ -114,11 +114,18 @@ button {
     font-size: 14px;
     display: flex;
     justify-content: center;
-    align-items: center;
+    justify-self: center;
     margin: 14px 0 0 33px;
     transition: all 250ms;
+    box-shadow: 0px 0px 20px rgba(225, 145, 243, 0.772);
+    
 }
-
+.botao{
+    display:flex;
+    justify-content:center;
+    margin: -30px 0 50px -50px;
+    scale: 1.2;
+}
 
 button:hover {
     background-color: #d7a9f5;
@@ -131,6 +138,10 @@ button:hover {
 .quote {
     background-color: #EFD8FE;
     padding: 20px 10px 28px 10px;
+    display: block;
+    justify-content: center;
+}
+.credit{
     display: flex;
     justify-content: center;
 }
@@ -208,6 +219,34 @@ button:hover {
     justify-content: center;
     align-content: center;
     display: flex;
+    cursor: pointer;
+}
+
+.whatsapp {
+    position: fixed;
+    width: 60px;
+    height: 60px;
+    bottom: 20px;
+    left:10px;
+    right:unset;
+    background-color: #25d366;
+    color: #FFF;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    font-size: 30px;
+    box-shadow: 2px 2px 3px #999;
+}
+
+#wpp{
+    margin-top: 10px;
+}
+
+.whatsapp:hover {
+    background-color: #d7a9f5;
+    cursor: pointer;
+    transform: scale(1.1);
+    transition: ease-in-out 200ms;
 }
 
 .legenda-footer {
@@ -218,7 +257,6 @@ button:hover {
 }
 
 footer {
-    position: fixed;
     bottom: 0;
     width: 100%;
     background-color: #fff;
@@ -279,4 +317,13 @@ footer {
     font-family: "Inter", sans-serif;
     font-weight: 500;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+.veja-mais {
+    font-size: 40px;
+    display: flex;
+    justify-content: center;
+
+}
+#mandala{
+    cursor: pointer;
 }
