--- a/style.css
+++ b/style.css
@@ -80,18 +80,18 @@ body {
 }
 
 .card {
-    width: 409px;
-    height: 499px;
+    width: 309px;
+    height: 399px;
     border-radius: 50px;
     background: #EFD8FE;
-    display: inline-block;
+    display:inline-block;
     justify-self: center;
 }
 
 .card-img {
     
-    width: 409px;
-    height: 419px;
+    width: 309px;
+    height: 319px;
     border-radius: 50px;
     padding-top: 0px;
     transition: all 250ms;
@@ -183,11 +183,16 @@ button:hover {
     background-color: #F8F7F7;
 }
 
-.sobre-texto {
-    float: left;
+.sobre-texto > p {
+ 
     width: 45%;
     margin-right: 10%;
-    box-sizing: border-box;
+    font-family: Inter;
+}
+.sobre-texto > h3 {
+    width: 45%;
+    margin-right: 10%;
+    font-family: Judson;
 }
 
 .titulo-quem-sou-eu {
@@ -326,4 +331,96 @@ footer {
 }
 #mandala{
     cursor: pointer;
+}
+.valores {  
+    background: #f3f3f3;  
+    padding: 20px;  
+    display: flex;  
+    justify-content: center;  
+    gap: 20px;  
+    margin-top: 40px;  
+}  
+
+.valor-item {  
+    text-align: center;  
+    max-width: 200px;  
+}  
+
+.valor-img {  
+    width: 100%;  
+    border-radius: 50%;  
+} 
+
+.valor-title { 
+    color: #333; 
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);  
+} 
+
+@media (max-width: 768px) {  
+    .valores {  
+    flex-direction: column;  
+    align-items: center;  
+    }  
+
+    .valor-item {  
+    max-width: 80%;  
+    margin-bottom: 20px;  
+    }  
+    .mainTitle {
+    font-size: 19px;
+    }
+
+    .navBar {
+    flex-direction: row;
+    align-items: center;
+    }
+
+    .link, .linkHere {
+    font-size: 14px;
+    }
+
+    .text {
+    font-size: 36px;
+    }
+
+    .produtos {
+    font-size: 28px;
+    }
+
+    .frase {
+    padding: 25px 10px;
+    }
+
+    .sobre {
+    padding: 30px 10px;
+    }
+
+    .titulo-quem-sou-eu {
+    font-size: 6vw;
+    }
+
+    .text-overlay {
+    font-size: 36px;
+    }
+
+    .veja-mais {
+    font-size: 32px;
+    }
+    .img-sobre{
+    width: 0%;
+    height: 0%;
+    border-radius: 20px;
+    text-shadow: 0px 0px 15px rgba(0, 0, 0, 0.826);
+}
+.sobre-texto {
+
+    width: 45%;
+    margin-right: 10%;
+    box-sizing: border-box;
+    display:inline-block;
+    flex-direction: column;
+}
+.text-overlay{
+    font-size: 25px;
+}
 }
