--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Judson:regular,italic,700);
 @import url(https://fonts.googleapis.com/css?family=Inter:100,200,300,regular,500,600,700,800,900);
 
+/* Estilos gerais */
 #opcoes {
     text-decoration: none;
 }
@@ -19,7 +20,6 @@ a {
     background-color: #fefcff;
     display: flex;
     justify-content: center;
-
 }
 
 .navBar {
@@ -31,7 +31,6 @@ a {
     background-color: #fefcff;
     padding: 20px 10px 20px 10px;
     z-index: 1;
-
 }
 
 .link {
@@ -48,12 +47,16 @@ a {
     color: #d7a9f5;
     text-decoration: none;
     font-weight: 500;
-
-
 }
 
 body {
-    margin: 0px;
+    width: 100vw;
+    margin: 0;
+}
+
+main {
+    width: 100%;
+    margin: 0;
 }
 
 .img {
@@ -77,21 +80,23 @@ body {
     justify-content: center;
     align-items: center;
     margin-bottom: 73px;
+    flex-wrap: wrap;
 }
 
 .card {
-    width: 309px;
-    height: 399px;
+    width: 100%;
+    max-width: 409px;
+    height: auto;
     border-radius: 50px;
     background: #EFD8FE;
-    display:inline-block;
+    display: inline-block;
     justify-self: center;
 }
 
 .card-img {
-    
-    width: 309px;
-    height: 319px;
+    width: 100%;
+    max-width: 409px;
+    height: auto;
     border-radius: 50px;
     padding-top: 0px;
     transition: all 250ms;
@@ -99,335 +104,308 @@ body {
 
 .card-img:hover {
     transform: scale(1.04);
-    border-radius: 15px 15px 15px 15px;
-    box-shadow: 0px 0px 20px rgba(225, 145, 243, 0.772);
+    border-radius: 15px;
+    box-shadow: 0px 0px 20
 }
 
-button{
-    font-family: Inter;
-    font-weight: bold;
-    background-color: #fefcff;
-    padding: 14px 24px;
-    border: unset;
-    border-radius: 50px;
-    z-index: 0;
-    font-size: 14px;
-    display: flex;
-    justify-content: center;
-    justify-self: center;
-    margin: 14px 0 0 33px;
-    transition: all 250ms;
-    box-shadow: 0px 0px 20px rgba(225, 145, 243, 0.772);
+    button {
+        font-family: Inter;
+        font-weight: bold;
+        background-color: #fefcff;
+        padding: 14px 24px;
+        border: unset;
+        border-radius: 50px;
+        z-index: 0;
+        font-size: 14px;
+        display: flex;
+        justify-content: center;
+        justify-self: center;
+        margin: 14px 0 0 33px;
+        transition: all 250ms;
+        box-shadow: 0px 0px 20px rgba(225, 145, 243, 0.772);
+    }
     
-}
-.botao{
-    display:flex;
-    justify-content:center;
-    margin: -30px 0 50px -50px;
-    scale: 1.2;
-}
-
-button:hover {
-    background-color: #d7a9f5;
-    cursor: pointer;
-    transform: scale(1.1)
-}
-
-
-
-.quote {
-    background-color: #EFD8FE;
-    padding: 20px 10px 28px 10px;
-    display: block;
-    justify-content: center;
-}
-.credit{
-    display: flex;
-    justify-content: center;
-}
-
-.text {
-
-    font-family: Judson;
-    text-align: center;
-    font-size: 48px;
-    text-shadow: 0px 0px 8px rgba(0, 0, 0, 0.33);
-}
-
-.produtos {
-    font-family: Judson;
-    margin-left: 10px;
-    font-size: 35px;
-    font-weight: 500;
-    text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.33);
-}
-
-.frase {
-    display: flex;
-    flex-direction: row;
-    gap: 15px;
-    background-color: #EFD8FE;
-    margin: 0;
-    width: 100%;
-    padding: 25px 300px 25px 300px;
-    font-family: "Judson", serif;
-    font-weight: 400;
-    font-style: normal;
-}
-
-.sobre {
-    display: flex;
-    gap: 56px;
-    padding: 60px 50px 60px 135px;
-    overflow: hidden;
-    background-color: #F8F7F7;
-}
-
-.sobre-texto > p {
- 
-    width: 45%;
-    margin-right: 10%;
-    font-family: Inter;
-}
-.sobre-texto > h3 {
-    width: 45%;
-    margin-right: 10%;
-    font-family: Judson;
-}
-
-.titulo-quem-sou-eu {
-    font-family: "Judson", serif;
-    font-size: 4vw;
-    margin: 0;
-}
-
-.texto-quem-sou-eu {
-    font-family: "Inter", sans-serif;
-}
-
-.img-sobre {
-    width: 493px;
-    height: 693px;
-    border-radius: 20px;
-    text-shadow: 0px 0px 15px rgba(0, 0, 0, 0.826);
-}
-
-
-.instagram {
-    background-color: #d7a9f5;
-    width: 17px;
-    scale: 2;
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border-radius: 5px;
-    justify-content: center;
-    align-content: center;
-    display: flex;
-    cursor: pointer;
-}
-
-.whatsapp {
-    position: fixed;
-    width: 60px;
-    height: 60px;
-    bottom: 20px;
-    left:10px;
-    right:unset;
-    background-color: #25d366;
-    color: #FFF;
-    border-radius: 5px;
-    display: flex;
-    justify-content: center;
-    font-size: 30px;
-    box-shadow: 2px 2px 3px #999;
-}
-
-#wpp{
-    margin-top: 10px;
-}
-
-.whatsapp:hover {
-    background-color: #d7a9f5;
-    cursor: pointer;
-    transform: scale(1.1);
-    transition: ease-in-out 200ms;
-}
-
-.legenda-footer {
-    background-color: #EFD8FE;
-    padding: 1px;
-    display: flex;
-    justify-content: center;
-}
-
-footer {
-    bottom: 0;
-    width: 100%;
-    background-color: #fff;
-    text-align: center;
-}
-
-.footer-bar {
-    background-color: #9867B899;
-    color: #010B13;
-    padding: 5px 0; 
-    margin: 0;
-}
-
-.footer-background {
-    background-color: #EFD8FE;
-    padding: 27px 0; 
-    margin: 0;
-    position: relative;
-}
-
-.social-media {
-    position: absolute;
-    right: 10px; 
-    top: 50%;
-    transform: translateY(-50%);
-}
-
-.social-media a {
-    margin: 0;
-}
-
-.social-media img {
-    width: 300px;
-    height: auto;
-}
-
-.contatenos-img-container {
-    position: relative;
-    width: 100%;
-    height: 128px;
-    overflow: hidden;
-}
-
-.contatenos-img-container > img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    filter: blur(5px);
-}
-
-.text-overlay {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    font-size: 48px;
-    font-family: "Inter", sans-serif;
-    font-weight: 500;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-}
-.veja-mais {
-    font-size: 40px;
-    display: flex;
-    justify-content: center;
-
-}
-#mandala{
-    cursor: pointer;
-}
-.valores {  
-    background: #f3f3f3;  
-    padding: 20px;  
-    display: flex;  
-    justify-content: center;  
-    gap: 20px;  
-    margin-top: 40px;  
-}  
-
-.valor-item {  
-    text-align: center;  
-    max-width: 200px;  
-}  
-
-.valor-img {  
-    width: 100%;  
-    border-radius: 50%;  
-} 
-
-.valor-title { 
-    color: #333; 
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);  
-} 
-.ajuda{
-    font-family: Inter;
-    font-size: 20px;
-    margin-left: 5px;
-}
-.box-ajuda{
-    text-align: center;
-}
-@media (max-width: 768px) {  
-    .valores {  
-    flex-direction: column;  
-    align-items: center;  
-    }  
-
-    .valor-item {  
-    max-width: 80%;  
-    margin-bottom: 20px;  
-    }  
-    .mainTitle {
-    font-size: 19px;
+    .botao {
+        display: flex;
+        justify-content: center;
+        margin: -30px 0 50px -50px;
+        scale: 1.2;
     }
-
-    .navBar {
-    flex-direction: row;
-    align-items: center;
+    
+    button:hover {
+        background-color: #d7a9f5;
+        cursor: pointer;
+        transform: scale(1.1);
     }
-
-    .link, .linkHere {
-    font-size: 14px;
+    
+    .quote {
+        background-color: #EFD8FE;
+        padding: 20px 10px 2px 10px;
+        display: block;
+        justify-content: center;
+        margin-top: -10px;
     }
-
+    
+    .credit {
+        display: flex;
+        justify-content: center;
+    }
+    
     .text {
-    font-size: 36px;
+        font-family: Judson;
+        text-align: center;
+        font-size: 48px;
+        text-shadow: 0px 0px 8px rgba(0, 0, 0, 0.33);
     }
-
+    
     .produtos {
-    font-size: 28px;
+        font-family: Judson;
+        margin-left: 10px;
+        font-size: 35px;
+        font-weight: 500;
+        text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.33);
     }
-
+    
     .frase {
-    padding: 25px 10px;
+        display: flex;
+        flex-direction: row;
+        gap: 15px;
+        background-color: #EFD8FE;
+        margin: 0;
+        width: 100%;
+        padding: 25px 300px;
+        font-family: "Judson", serif;
+        font-weight: 400;
+        font-style: normal;
     }
-
+    
     .sobre {
-    padding: 30px 10px;
+        display: flex;
+        gap: 56px;
+        padding: 60px 50px;
+        overflow: hidden;
+        background-color: #F8F7F7;
+        flex-wrap: wrap;
     }
-
+    
+    .sobre-texto {
+        float: left;
+        width: 100%;
+        max-width: 45%;
+        margin-right: 10%;
+        box-sizing: border-box;
+    }
+    
     .titulo-quem-sou-eu {
-    font-size: 6vw;
+        font-family: "Judson", serif;
+        font-size: 4vw;
+        margin: 0;
+    }
+    
+    .texto-quem-sou-eu {
+        font-family: "Inter", sans-serif;
+    }
+    
+    .img-sobre {
+        width: 100%;
+        max-width: 531px;
+        height: auto;
+        border-radius: 50px;
+        text-shadow: 0px 0px 15px rgba(0, 0, 0, 0.826);
+    }
+    
+    .instagram {
+        background-color: #d7a9f5;
+        width: 17px;
+        scale: 2;
+        position: absolute;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        border-radius: 5px;
+        justify-content: center;
+        align-content: center;
+        display: flex;
+        cursor: pointer;
+    }
+    
+    .whatsapp {
+        position: fixed;
+        width: 60px;
+        height: 60px;
+        bottom: 20px;
+        left: 10px;
+        background-color: #25d366;
+        color: #FFF;
+        border-radius: 5px;
+        display: flex;
+        justify-content: center;
+        font-size: 30px;
+        box-shadow: 2px 2px 3px #999;
+    }
+    
+    #wpp {
+        margin-top: 10px;
+    }
+    
+    .whatsapp:hover {
+        background-color: #d7a9f5;
+        cursor: pointer;
+        transform: scale(1.1);
+        transition: ease-in-out 200ms;
+    }
+    
+    .legenda-footer {
+        background-color: #EFD8FE;
+        padding: 1px;
+        display: flex;
+        justify-content: center;
     }
 
+    .legenda-footer p {
+        font-family:  "Inter", sans-serif;;
+    }
+    
+    footer {
+        bottom: 0;
+        width: 100%;
+        background-color: #fff;
+        text-align: center;
+    }
+    
+    .footer-bar {
+        background-color: #9867B899;
+        color: #010B13;
+        padding: 5px 0; 
+        margin: 0;
+    }
+    
+    .footer-background {
+        background-color: #EFD8FE;
+        padding: 27px 0; 
+        margin: 0;
+        position: relative;
+    }
+
+    
+    
+    .social-media {
+        position: absolute;
+        right: 10px; 
+        top: 50%;
+        transform: translateY(-50%);
+    }
+    
+    .social-media a {
+        margin: 0;
+    }
+    
+    .social-media img {
+        width: 300px;
+        height: auto;
+    }
+    
+    .contatenos-img-container {
+        position: relative;
+        width: 100%;
+        height: 128px;
+        overflow: hidden;
+    }
+    
+    .contatenos-img-container > img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        filter: blur(5px);
+    }
+    
     .text-overlay {
-    font-size: 36px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: white;
+        font-size: 48px;
+        font-family: "Inter", sans-serif;
+        font-weight: 500;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     }
-
+    
     .veja-mais {
-    font-size: 32px;
+        font-size: 40px;
+        display: flex;
+        justify-content: center;
     }
-    .img-sobre{
-    width: 0%;
-    height: 0%;
-    border-radius: 20px;
-    text-shadow: 0px 0px 15px rgba(0, 0, 0, 0.826);
-}
-.sobre-texto {
-
-    width: 45%;
-    margin-right: 10%;
-    box-sizing: border-box;
-    display:inline-block;
-    flex-direction: column;
-}
-.text-overlay{
-    font-size: 25px;
-}
-}
+    
+    #mandala {
+        cursor: pointer;
+    }
+    
+   
+    @media (max-width: 768px) {
+        .mainTitle {
+            font-size: 30px;
+        }
+    
+        .link, .linkHere {
+            font-size: 16px;
+        }
+    
+        .produtos-escrito {
+            margin: 20px 0 10px 5%;
+        }
+    
+        .flex-home {
+            flex-direction: column;
+            gap: 10px;
+        }
+    
+        .card {
+            width: 90%;
+            height: auto;
+        }
+    
+        .quote {
+            padding: 10px 5px 1px 5px;
+        }
+    
+        .text {
+            font-size: 36px;
+        }
+    
+        .produtos {
+            font-size: 28px;
+        }
+    
+        .frase {
+            flex-direction: column;
+            padding: 10px 20px;
+        }
+    
+        .sobre {
+            flex-direction: column;
+            padding: 20px;
+            gap: 20px;
+        }
+    
+        .sobre-texto {
+            width: 100%;
+            margin-right: 0;
+        }
+    
+        .titulo-quem-sou-eu {
+            font-size: 6vw;
+        }
+    
+        .img-sobre {
+            width: 100%;
+            height: auto;
+        }
+    
+        .text-overlay {
+            font-size: 24px;
+        }
+    
+        .veja-mais {
+            font-size: 24px;
+        }
+    }
